<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="example.hackathoncdt.CadastrarUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_aviso"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="40dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_apelido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_apelido"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:hint="@string/edt_senha" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/CustomButtonLaranja"
            android:id="@+id/btn_registrar"
            android:layout_marginTop="40dp"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:text="@string/btn_registrar"
            android:layout_gravity="center"
            android:onClick="registrar"/>



    </LinearLayout>
</RelativeLayout>
