<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_estatisticas_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="example.hackathoncdt.EstatisticasUserActivity">

    <TextView
        android:id="@+id/txt_apelido_user"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_coin"/>

    <TextView
        android:id="@+id/txt_moedas_quant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_moedas"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Button
        style="@style/CustomButtonLaranja"
        android:id="@+id/btn_resgatar"
        android:layout_marginTop="40dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/txt_resgatar"/>


</LinearLayout>
