<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.hackathoncdt.LoginUserActivity">

    <LinearLayout
        android:id="@+id/ll_edits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textEmailAddress"
                android:hint="@string/edt_login" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textPassword"
                android:lines="1"
                android:hint="@string/edt_senha" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/CustomButtonLaranja"
            android:id="@+id/btn_entrar"
            android:layout_marginTop="50dp"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/btn_entrar" />
        
        <Button
            android:id="@+id/btn_cadastrar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/btn_cadastrar"
            android:layout_gravity="center"
            android:background="@android:color/transparent"/>
    </LinearLayout>



</RelativeLayout>
