<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="example.hackathoncdt.MainMenuActivity">

    <!-- Ver Ong's -->
    <LinearLayout
        android:id="@+id/ll_ver_ongs"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shape_btn_laranja"
        android:clickable="true"
        android:orientation="horizontal"
        android:onClick="startVerOngs">

        <ImageView
            android:layout_marginLeft="9dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_map_icon"
            android:tint="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ver_ongs"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"/>
    </LinearLayout>

    <!-- Minhas Estatísticas -->
    <LinearLayout
        android:id="@+id/ll_minhas_estatisticas"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_btn_laranja"
        android:clickable="true"
        android:orientation="horizontal"
        android:onClick="startMinhasEstatisticas">

        <ImageView
            android:layout_marginLeft="9dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_bar_chart_icon"
            android:tint="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_minhas_estatisticas"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

    <!-- Ranking -->
    <LinearLayout
        android:id="@+id/ll_ranking_geral"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_btn_laranja"
        android:clickable="true"
        android:orientation="horizontal"
        android:onClick="startRankingGeral">

        <ImageView
            android:layout_marginLeft="9dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_list_icon"
            android:tint="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ranking_geral"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/textView" />

    </LinearLayout>

    <!-- Ver empresas parceiras -->
    <LinearLayout
        android:id="@+id/ll_empresas_parceiras"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_btn_laranja"
        android:clickable="true"
        android:orientation="horizontal"
        android:onClick="startEmpresasParceiras">

        <ImageView
            android:layout_marginLeft="9dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/vector_lcity_icon"
            android:tint="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_empresas_parceiras"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
